fix href on the navigation bar; enlarge the navigation bar font size; add href for image in salvor page; add function for hiding the dialogue when click the area out of the box

--- a/css/demo.css
+++ b/css/demo.css
@@ -54,16 +54,16 @@ a,a:link{
 }
 /* Top Bar Style */
 .codrops-top{
-	line-height: 24px;
-	font-size: 11px;
-	background: rgba(255, 255, 255, 1);
+	line-height: 30px;
+	font-size: 15px;
+	background: rgba(255, 255, 255, 0.7);
 	text-transform: uppercase;
 	z-index: 9999;
 	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	height: 24px;
+	height: 30px;
 	box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
 	-webkit-animation: slideOut 0.5s ease-in-out 0.3s backwards;
 	-moz-animation: slideOut 0.5s ease-in-out 0.3s backwards;
